--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -56,8 +56,8 @@
 {% if user|has_role:'professor, system_admin' %}
 
 	<div class="col-md-12">
-		{% if subjects_student|length > 0 %}
-			{% for subject in subjects_teacher %}
+		{% if courses_teacher|length > 0 %}
+			{% for course in courses_teacher %}
 			  <!-- Put your content here! -->
 	          <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false">
 	            <div class="group">
@@ -66,7 +66,7 @@
 					      <div class="row">
 					        <div class="col-xs-9 col-md-10 titleTopic">
 					          <a role="button" data-toggle="collapse" data-parent="#accordion" href=".collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
-					          <h4>{{subject.name}}</h4>
+					          <h4>{{course.name}}</h4>
 					          </a>
 					        </div>
 					        <div class="col-xs-4 col-md-2" id="divMoreActions">
@@ -81,7 +81,7 @@
 					                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
 					              </button>
 					              <ul class="dropdown-menu" aria-labelledby="moreActions">
-					                <li><a href="http://127.0.0.1:8080/html/screens/users/teacher/course_detail_teacher.html"><i class="fa fa-angle-double-right fa-fw" aria-hidden="true"></i>&nbsp; Access</a></li>
+					                <li><a href="{% url 'course:view' course.slug %}"><i class="fa fa-angle-double-right fa-fw" aria-hidden="true"></i>&nbsp; Access</a></li>
 					                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
 					                <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeCourse"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
 					              </ul>
@@ -91,13 +91,13 @@
 					    </div>
 					    <div class="panel-collapse collapseOne collapse in" role="tabpanel" aria-labelledby="headingOne" aria-expanded="true" aria-hidden="false" tabindex="0">
 					      <div class="panel-body">
-					        <p><b>Course Name: </b>{{subject.name}}</p>
+					        <p><b>Course Name: </b>{{course.name}}</p>
 					        <p><b>Duration (in semesters): </b>09</p>
-					        <p><b>Coordinator: </b>{{subject.professors}}</p>
+					        <p><b>Coordinator: </b>{{course.professors}}</p>
 					        <p>
 					          <b>Description:</b>
 					          <i>
-					            {{subject.description}}
+					            {{course.description}}
 					          </i>
 					        </p>
 
@@ -146,7 +146,7 @@
 	</div>
 
 	{% if subjects_student|length > 0 %}
-		{% for subject in subjects_student %}
+		{% for course in courses_student %}
 			<div class="col-md-12">
 			    <div class="panel panel-info">
 			    <!--{% if course.image %}
@@ -156,13 +156,13 @@
 	            {% endif %} -->
 				  <div class="panel-heading">
 				    	<h3 class="panel-title">Course</h3>
-				    	<span class="label label-info">{{ subject.category }}</span>
-							<span class="label label-warning">{{ subject.max_students }} {% trans 'students tops' %}</span>  
+				    	<span class="label label-info">{{ course.category }}</span>
+							<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>  
 				  </div>     
 				  <div class="panel-body">
-				    <p><b>Course Name: </b>{{ subject.name }}</p>
+				    <p><b>Course Name: </b>{{ course.name }}</p>
 				    <p><b>Duration (in semesters): </b>09</p>
-				    <p><b>Coordinator: </b>{{subject.professors}}</p>
+				    <p><b>Coordinator: </b>{{course.professors}}</p>
 				    <p>
 				      <b>Description:</b>
 				      <i>
@@ -171,15 +171,15 @@
 				    </p>
 
 				    {% if user|has_role:'professor, system_admin' %}
-						<a href="{% url 'course:update' subject.slug %}" class="btn btn-sm btn-primary">
+						<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
 							<span class="glyphicon glyphicon-edit"></span>
 						</a>
-						<a href="{% url 'course:delete' subject.slug %}" class="btn btn-sm btn-danger">
+						<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
 							<span class="glyphicon glyphicon-trash"></span>
 						</a>
 					{% endif %}
 
-				    <a href="{% url 'course:view' subject.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
+				    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
 				  </div>
 				</div>            
     		</div>
