Adding Forum create template [Issue: #88]

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -320,3 +320,5 @@ body .container .jumbotron-inverse, body .container .well-inverse, body .contain
 .notification-count {
     background-color: #FF0000;
 }
+
+.datepicker{z-index:9999 !important}
