--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/datepicker.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-acessibility.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
@@ -38,7 +38,7 @@
 	<script type="text/javascript">$.material.init()</script>
 
 	<!--Javascript block for specific-app ones -->
-	<script src="{% static 'js/base/amadeus.js' %}"></script>
+	<script src="{% static 'js/main.js' %}"></script>
 	{% block style %}
 	{% endblock %}
 </head>
