--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -1,5 +1,9 @@
 {% load i18n %}
 
+{% block javascript %}
+    <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
+{% endblock %}
+
 <div class="panel panel-default">
     <a href="{% url 'course:view_topic' topic.slug %}">
         <div class="panel-heading">
@@ -13,4 +17,24 @@
 </div>
 <div class="panel-body">
     <p>{{topic.description|linebreaks}}</p>
+    {% list_topic_foruns request topic %}  
+</div>
+
+<div class="modal fade" id="forumModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">{% trans 'Forum' %}</h4>
+            </div>
+            <div class="modal-body">
+                <section>
+                    <div class="forum_topics"></div>
+                </section>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans 'Close' %}</button>
+                <button type="button" class="btn btn-primary btn-raised">{% trans 'Save changes' %}</button>
+            </div>
+        </div>
+    </div>
 </div>
