--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -19,7 +19,10 @@
     </a>
     <div class="panel-body">
         <p>{{ topic.description|linebreaks }}</p>
-        {% list_topic_foruns request topic %}        
+        <button class="btn btn-primary btn-raised" onclick="createForum('{% url 'forum:create' %}', '{{ topic.id }}')">{% trans '+ Create Forum' %}</button>
+        <div class="foruns_list">
+            {% list_topic_foruns request topic %}
+        </div>
     </div>
 </div>
 
@@ -27,7 +30,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">Forum</h4>
+                <h4 class="modal-title" id="myModalLabel">{% trans 'Forum' %}</h4>
             </div>
             <div class="modal-body">
                 <section>
@@ -37,6 +40,25 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans 'Close' %}</button>
                 <button type="button" class="btn btn-primary btn-raised">{% trans 'Save changes' %}</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="createForum" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">{% trans 'Forum' %}</h4>
+            </div>
+            <div class="modal-body">
+                <section>
+                    <div class="forum_form"></div>
+                </section>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans 'Close' %}</button>
+                <button type="button" onclick="$('#forum_create').submit();" class="btn btn-primary btn-raised">{% trans 'Create' %}</button>
             </div>
         </div>
     </div>
