--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -32,7 +32,7 @@
 	    <div class="panel-body">
 	        <ul class="nav nav-pills nav-stacked">
 	            <li><a href="javascript:void(0)">Replicate Course</a></li>
-	            <li><a href="javascript:void(0)">Create Course</a></li>
+	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
 	        </ul>
 	    </div>
 	</div>
