--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -80,11 +80,10 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-8">
               <div class="form-group is-empty">
-                <input type="text" class="form-control col-md-8" placeholder="Search Student">
+                <input type="text" class="form-control col-md-4" placeholder="Search Student">
               </div>
-            
             </div>
             </div>
           {% for student in students_activit %}
@@ -93,23 +92,24 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                      {{student.name}}<i class="fa fa-plus-square" aria-hidden="true"></i></a>
+                      {{student.name}} <i class="fa fa-plus-square" aria-hidden="true"></i></a>
                     </h4>
                   </div>
                   <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
                      <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-4">
                        <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i> 
-
                      </div>
                      {% if user|has_role:'professor, system_admin' %}
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                           <label> Nota:</label>
                           <input type="number" step="0.01">
                         </div>
                       {% else %}
-                        <input type="file" name="arquivos" class="btn btn-success" multiple/>
+                        <div class="col-md-4">
+                          <input type="file" name="arquivos" class="btn btn-success" multiple/>
+                        </div>
                      {% endif %}
                   </div>
                 </div>
