Adding js with cpf mask #14

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -39,6 +39,7 @@
 
 	<!--Javascript block for specific-app ones -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<script src="{% static 'js/base/amadeus.js' %}"></script>
 	{% block style %}
 	{% endblock %}
 </head>
