Adding forum delete [Issue: #96]

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,11 +22,14 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/alertify.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/themes/bootstrap.css' %}">
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-acessibility.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-datepicker.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/vendor/alertify.min.js' %}"></script>
 
   	<!-- Font awesome -->
 	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
