Changing from modal to page [Issue: #86]

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,6 +45,8 @@
 	<script src="{% static 'js/base/amadeus.js' %}"></script>
 	{% block style %}
 	{% endblock %}
+	{% block javascript %}
+	{% endblock %}
 </head>
 <body>
 	<div class="container-fluid">
