--- a/courses/templates/topic/list_topic_foruns.html
+++ b/courses/templates/topic/list_topic_foruns.html
@@ -1,3 +1,3 @@
 {% for forum in foruns %}
-	<a id="forum_{{ forum.id }}" href="javascript:showForum('{% url 'forum:index' %}', '{{forum.id}}')">{{ forum }}<br /></a>
+	<a id="forum_{{ forum.id }}" href="{% url 'course:forum:view' forum.slug %}">{{ forum }}<br /></a>
 {% endfor %}
