--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -52,10 +52,10 @@
     <div class="panel panel-info">
       <div class="panel-heading headingOne">
         <div class="row">
-          <div class="col-xs-8 col-md-10 titleTopic">
+          <div class="col-xs-8 col-md-9 titleTopic">
             <h4>{{course}}</h4>
           </div>
-          <div class="col-xs-4 col-md-2" id="divMoreActions">
+          <div class="col-xs-4 col-md-3" id="divMoreActions">
             <div class="btn-group">
               <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
                 <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
@@ -190,12 +190,12 @@
 <div class="panel panel-info">
   <div class="panel-heading headingTwo ui-sortable-handle" role="tab">
     <div class="row">
-        <div class="col-xs-9 col-md-10 titleTopic">
+        <div class="col-xs-9 col-md-9 titleTopic">
           <a role="button" data-toggle="collapse" data-parent="#accordion" href=".collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <h4>{{subject.name}}</h4>
+          <h4 style="color:white">{{subject.name}}</h4>
           </a>
         </div>
-        <div class="col-xs-3 col-md-2" id="divMoreActions">
+        <div class="col-xs-3 col-md-3" id="divMoreActions">
           <div class="btn-group">
             <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
               <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
